# notebook-bot

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/: main.py
src/app/keyboard/: keyboard.py
src/app/routers/: __init__.py  crypto_router.py  form_router.py  history_router.py  start_router.py  weather_router.py
src/app/web/: app.py
src/config/: config.py
src/core/: __init__.py  fetch_demo.py  llm_utils.py  models.py  repositories.py  utils.py
src/infra/: database.py  db_message_repositories.py  db_models.py  db_service.py  db_user_repositories.py
tests/: test_ollama.py
